--- a/abouther.html
+++ b/abouther.html
@@ -80,18 +80,18 @@
         
         <h2>Some Random Facts about Soura</h2>
         <ul>
-            <li>And 18 years old girl called soura living in Sidi Bouzid <span class="heart">💖</span>. She loves them too and she is always talking about them.</li>
+            <li>And 18 years old girl called soura living in Sidi Bouzid <span class="heart">💖</span>. She lovesher friends them too and she is always talking about them.</li>
             <li>She studies Bac SVT in lycee pilote. She is so smart: she has both Scientific 👩‍🔬 and Artistic 👩‍🎨 Creative Mind.</li>
-            <li>Her favorite color is White &#9898;. She has a black dress that looks just perfect .</li>
-            <li>She loves Coffe &#9749; , she adores the intensity of caffeine </li>
-            <li>She has a good taste in style too. She loves art and writing (like me hhh).</li>
+            <li>Her favorite color is White &#9898;. But she got a black dress that looks just perfect 🖤.</li>
+            <li>She loves Coffe &#9749; , she adores the intensity of caffeine 😪</li>
+            <li>She has a good taste in style too. She loves art and writing (like me hhh)✍.</li>
         </ul>
         
         <h2>Activities Soura Loves Doing:</h2>
         <ul>
-            <li>Travelling</li>
+            <li>Travelling ✈</li>
             <li>Talking to moohib</li>
-            <li>She loves sightseeing everything beautiful  </li>
+            <li>She loves sightseeing everything beautiful 🌹 </li>
             <li>coffee dates &#9749;</li>
             <li>Cooking (She can actually cook 🤤)</li>
         </ul>
@@ -102,7 +102,7 @@
             <li>Too much Sun 🌞 and Heat 🔥</li>
             <li>Attention</li>
             <li>Liars</li>
-            <li>Average peole</li>
+            <li>low quality peole</li>
             <li>Gossip Mean Girls who talk sh*t about others</li>
             <li>Boys that talk to too much girls</li>
         </ul>
