--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             font-family: 'Quicksand', sans-serif;
             font-weight: 000;
-            background-color: #FFD1DC;
+            background-color: #e0b0ff;
             color: #4A4A4A;
             margin: 0;
             padding: 0;
@@ -20,7 +20,7 @@
         }
         .container {
             max-width: 800px;
-            background-color: #FFF0F5;
+            background-color: #ffffff;
             padding: 30px;
             border-radius: 20px;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
@@ -72,14 +72,13 @@
 <body>
     <div class="container">
         <h1>🌟 To the sweetheart itself 🌟</h1>
-        <p>In a world full of challenges and uncertainties, having someone who consistently radiates positivity and support is invaluable. Soura is one of those extraordinary individuals who brings light and joy into the lives of everyone who knows her. Her vibrant personality and kind heart make her a truly remarkable person, and this website is a small way to celebrate the incredible impact she has on those around her.</p>
-        <p>One of the first things you'll notice about Soura is her striking appearance. She is a beautiful white woman with hair that could easily fascinate me. Her locks are not just well-kept but exude a sense of effortless elegance that perfectly complements her natural beauty. Whether she’s letting it flow freely or styling it with care, her hair always adds an extra touch of grace to her presence.</p>
-        <p>But there is so much more to her than just her looks. She is a beacon of support and encouragement, always ready to lend a listening ear or offer a comforting word. Her friends and family know they can rely on her, no matter the situation. She has an innate ability to make people feel valued and understood, which is a rare and precious gift. Her supportive nature is a testament to her compassion and empathy, qualities that make her irreplaceable..</p>
-        <p>One of sarrour’s greatest passions is coffee. She is a true aficionado, always on the hunt for the perfect brew. Whether it’s a simple cup of black coffee or an elaborate latte art creation, she appreciates the nuances and flavors of this beloved beverage. Her love for coffee goes beyond just drinking it; it’s a ritual that brings her joy and a sense of community. She often shares her coffee experiences with me , turning my simple cup into a moment of connection and pleasure.</span></p>
-        <p>Traveling is another of sweetheart’s loves. She has an adventurous spirit and a curiosity about the world that takes her to new and exciting places. Her travels are not just about seeing new sights but about immersing herself in different cultures and making memories. Each destination adds a new chapter to her life story, filled with experiences that broaden her horizons and enrich her soul. Her travel tales are always filled with wonder and excitement, inspiring those around her to explore the world and embrace new adventures.</p>
-        <p>In essence, She is a person who enriches the lives of those she touches. Her beauty, both inside and out, her unwavering support, and her passions for coffee and travel make her a truly extraordinary individual. This website is a small tribute to her awesomeness and a way to celebrate the wonderful person she is. Here’s to Her,</p>
+        <p>Tasnim is the kind of girl who makes your heart skip a beat with just one look. Her brown hair flows like silk, and those eyes—don’t even get me started. They could lure you in and hold you captive, and you wouldn’t mind at all. She’s got a body sculpted to perfection from hours at the gym, though I haven’t had the pleasure of seeing it up close. But oh, the thought alone is enough to drive me wild.</p>
+        <p>Her taste in music? Absolutely on point, just like everything else about her. She knows how to set the mood with the perfect playlist, making every moment feel like it’s straight out of a movie. Whether it’s a sultry tune that makes you want to pull her close or a beat that gets you moving, she’s got it covered.</p>
+        <p>But here’s the thing—she’s not just a pretty face and a killer body. She’s got this way of making you feel like you’re the only person in the room, the only one who matters. She’s supportive in all the right ways, always knowing when to push and when to pull back. It’s like she’s got this sixth sense when it comes to me, and it’s addictive.</p>
+        <p>it’s the way she makes me feel that has me completely hooked. She’s got me wrapped around her finger, and honestly, I’m not even mad about it.</span></p>
+        <p>Tassnim got this incredible way of making everything better just by being herself. Every moment with her feels like a perfect song—one I never want to stop playing. She's more than amazing; She's absolutely unforgettable. And I’ve got to say, I’m pretty lucky to have someone as special as her in my life.</p>
         <div class="button-container">
-            <a href="pictures.html" class="button">Soura's Pictures</a>
+            <a href="pictures.html" class="button">Tassnim's Pictures</a>
             <a href="abouther.html" class="button">All About Her</a>
         </div>
     </div>
