--- a/pictures.html
+++ b/pictures.html
@@ -10,7 +10,7 @@
     body {
         font-family: 'Quicksand', sans-serif;
         font-weight: 700;
-        background-color: #FFD1DC;
+        background-color: #e0b0ff;
         color: #4A4A4A;
         margin: 0;
         padding: 20px;
@@ -18,7 +18,7 @@
     .container {
         max-width: 1000px;
         margin: 0 auto;
-        background-color: #FFF0F5;
+        background-color: #ffffff;
         padding: 30px;
         border-radius: 20px;
         box-shadow: 0 0 20px rgba(0,0,0,0.1);
@@ -68,15 +68,14 @@
 <style type="text/css" id="operaUserStyle"></style></head>
 <body>
 <div class="container">
-    <h1>Soura's Picture Album</h1>
+    <h1>Tassnim's Picture Album</h1>
     <div class="image-gallery">  
-          <img src="herimages/2.png" alt="">
+          <img src="herimages/1.png" alt="">
           <img src="herimages/3.png" alt="">
           <img src="herimages/4.png" alt="">
           <img src="herimages/5.png" alt="">
           <img src="herimages/6.png" alt="">
-          <img src="herimages/8.png" alt="">
-          <img src="herimages/Screenshot 2024-08-06 111900.png" alt="">
+          <img src="herimages/7.png" alt="">
     </div>
 </div>
 <a href="index.html" class="button">Back to Home</a>
