--- a/abouther.html
+++ b/abouther.html
@@ -91,7 +91,7 @@
             <li>Listening to music</li>
             <li>Talking to moohib</li>
             <li>She loves sightseeing everything beautiful 🌹 </li>
-            <li>sucess</li>
+            <li>success</li>
             <li>to be treated so well </li>
         </ul>
         
@@ -103,7 +103,7 @@
             <li>Liars</li>
             <li>low quality peole</li>
             <li>Gossip Mean Girls who talk sh*t about others</li>
-            <li>Boys that talk to too much girls</li>
+            <li>Boys that talk to too much girls (not me istg)</li>
         </ul>
 
         <h2>Special Words Tassnim Says:</h2>
