--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A 20 hours Masterpiece for my soura</title>
+    <title>A 20 hours Masterpiece for my Tassnim</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -72,6 +72,7 @@
 <body>
     <div class="container">
         <h1>🌟 To the sweetheart itself 🌟</h1>
+        <p>Since i know her I'v been flirting with her but this is my first time doing something that exists in our true life . Thus,this is a little of a lot for my only sweetheart Tassnim who deserves to be treated like a living queen ❤</p>
         <p>Tasnim is the kind of girl who makes your heart skip a beat with just one look. Her brown hair flows like silk, and those eyes—don’t even get me started. They could lure you in and hold you captive, and you wouldn’t mind at all. She’s got a body sculpted to perfection from hours at the gym, though I haven’t had the pleasure of seeing it up close. But oh, the thought alone is enough to drive me wild.</p>
         <p>Her taste in music? Absolutely on point, just like everything else about her. She knows how to set the mood with the perfect playlist, making every moment feel like it’s straight out of a movie. Whether it’s a sultry tune that makes you want to pull her close or a beat that gets you moving, she’s got it covered.</p>
         <p>But here’s the thing—she’s not just a pretty face and a killer body. She’s got this way of making you feel like you’re the only person in the room, the only one who matters. She’s supportive in all the right ways, always knowing when to push and when to pull back. It’s like she’s got this sixth sense when it comes to me, and it’s addictive.</p>
