--- a/index.html
+++ b/index.html
@@ -72,14 +72,16 @@
 <body>
     <div class="container">
         <h1>🌟 To the sweetheart itself 🌟</h1>
-        <p>Since i know her I'v been flirting with her but this is my first time doing something that exists in our true life . Thus,this is a little of a lot for my only sweetheart Tassnim who deserves to be treated like a living queen ❤</p>
-        <p>Tasnim is the kind of girl who makes your heart skip a beat with just one look. Her brown hair flows like silk, and those eyes—don’t even get me started. They could lure you in and hold you captive, and you wouldn’t mind at all. She’s got a body sculpted to perfection from hours at the gym, though I haven’t had the pleasure of seeing it up close. But oh, the thought alone is enough to drive me wild.</p>
-        <p>Her taste in music? Absolutely on point, just like everything else about her. She knows how to set the mood with the perfect playlist, making every moment feel like it’s straight out of a movie. Whether it’s a sultry tune that makes you want to pull her close or a beat that gets you moving, she’s got it covered.</p>
-        <p>But here’s the thing—she’s not just a pretty face and a killer body. She’s got this way of making you feel like you’re the only person in the room, the only one who matters. She’s supportive in all the right ways, always knowing when to push and when to pull back. It’s like she’s got this sixth sense when it comes to me, and it’s addictive.</p>
-        <p>it’s the way she makes me feel that has me completely hooked. She’s got me wrapped around her finger, and honestly, I’m not even mad about it.</span></p>
-        <p>Tassnim got this incredible way of making everything better just by being herself. Every moment with her feels like a perfect song—one I never want to stop playing. She's more than amazing; She's absolutely unforgettable. And I’ve got to say, I’m pretty lucky to have someone as special as her in my life.</p>
+        <p>Hey Eslem</p>
+        <p>I’ve been thinking about you and about how life had been treating you a lot lately, and I wanted to take a moment to remind you of just how amazing you are, especially when life’s throwing challenges your way. I know things have been tough, and I wish I could just snap my fingers and make everything better for you. But since I can't do that, I figured the least I can do is remind you how incredible you are.</p>
+        <p>First off, let me just say, you are absolutely gorgeous. I’m not just talking about the way you look (which, by the way, is pretty breathtaking). It’s that smile of yours—the one that lights up your face and makes everything around you feel a little bit brighter. I swear, there’s something magical about it. Even on the hardest days, when I see you smile, it’s like the world gets a little less heavy. I’ve never seen a smile quite like yours, and I can’t get enough of it.</p>
+        <p>You have this kindness in you that’s so rare and beautiful. The way you care for others, even when you’re struggling, is something I really admire about you. You’ve got a heart that’s pure gold, and I hope you know how special that makes you. You’re lovely, inside and out, and I’m so grateful to have someone like you in my life.</p>
+        <p>And I want you to know, I see how hard things have been for you. I see the challenges you’re facing, and it breaks my heart to know you’re going through it. But I also see your strength, even when you don’t feel it yourself. You’re one of the most resilient people I know, and even in the midst of all this, you still find a way to support me and those around you. That’s something truly special, and it’s a testament to the amazing person you are.</span></p>
+        <p>I can’t help but feel like you’re way too special to be going through this alone. Your presence means more than you might realize. When you’re around, everything feels a little more manageable, a little less overwhelming. You bring something unique and irreplaceable into my life, and I don’t know what I’d do without you.</p>
+        <p>So, please, don’t forget how important you are—to me, and to everyone who’s lucky enough to know you. You’ve got a light inside you that’s too bright to be dimmed by anything life throws your way. And if you ever need a reminder of how amazing you are, I’m always here to tell you.</p>
+        <p>Take care of yourself, okay? You deserve all the happiness in the world, and I’m here for you every step of the way.</p>
         <div class="button-container">
-            <a href="pictures.html" class="button">Tassnim's Pictures</a>
+            <a href="pictures.html" class="button">Eslem's Pictures</a>
             <a href="abouther.html" class="button">All About Her</a>
         </div>
     </div>
