--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A 20 hours Masterpiece for my Eslem</title>
+    <title>For my life ! </title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -71,17 +71,20 @@
 </head>
 <body>
     <div class="container">
-        <h1>🌟 To the sweetheart itself 🌟</h1>
-        <p>Hey Eslem</p>
-        <p>I’ve been thinking about you and about how life had been treating you a lot lately, and I wanted to take a moment to remind you of just how amazing you are, especially when life’s throwing challenges your way. I know things have been tough, and I wish I could just snap my fingers and make everything better for you. But since I can't do that, I figured the least I can do is remind you how incredible you are.</p>
-        <p>First off, let me just say, you are absolutely gorgeous. I’m not just talking about the way you look (which, by the way, is pretty breathtaking). It’s that smile of yours—the one that lights up your face and makes everything around you feel a little bit brighter. I swear, there’s something magical about it. Even on the hardest days, when I see you smile, it’s like the world gets a little less heavy. I’ve never seen a smile quite like yours, and I can’t get enough of it.</p>
-        <p>You have this kindness in you that’s so rare and beautiful. The way you care for others, even when you’re struggling, is something I really admire about you. You’ve got a heart that’s pure gold, and I hope you know how special that makes you. You’re lovely, inside and out, and I’m so grateful to have someone like you in my life.</p>
-        <p>And I want you to know, I see how hard things have been for you. I see the challenges you’re facing, and it breaks my heart to know you’re going through it. But I also see your strength, even when you don’t feel it yourself. You’re one of the most resilient people I know, and even in the midst of all this, you still find a way to support me and those around you. That’s something truly special, and it’s a testament to the amazing person you are.</span></p>
-        <p>I can’t help but feel like you’re way too special to be going through this alone. Your presence means more than you might realize. When you’re around, everything feels a little more manageable, a little less overwhelming. You bring something unique and irreplaceable into my life, and I don’t know what I’d do without you.</p>
-        <p>So, please, don’t forget how important you are—to me, and to everyone who’s lucky enough to know you. You’ve got a light inside you that’s too bright to be dimmed by anything life throws your way. And if you ever need a reminder of how amazing you are, I’m always here to tell you.</p>
-        <p>Take care of yourself, okay? You deserve all the happiness in the world, and I’m here for you every step of the way.</p>
+        <h1>🌟 To the One I Know I’ll Call Mine 🌟</h1>
+        <p>It’s wild how, even before we put a label on what we have, I already know deep down that you're the one I want to build something real with. You and I, we’re not just a vibe—we’re a whole story waiting to be written. And I can’t wait for us to live out every chapter.</p>
+        <pI’m not going to just be another option for you. I’m here to be your best choice. You deserve nothing less than someone who sees every piece of you—your strengths, your quirks, the things you keep hidden. And guess what? I’m here for it all. I’m not just going to stand by you, I’m going to lift you higher.</p>
+        <p>You are breathtaking in ways I can't put into simple words. Your beauty isn’t just in the way you look, although I could get lost in your eyes, the way your smile lights up a room, or the way you carry yourself with such natural grace. It’s deeper than that. You’ve got this energy, this light about you that draws me in every single time. It’s in your laugh, your kindness, your strength—and that part of you that always finds a way to rise, no matter what life throws at you. You are truly gorgeous, inside and out, and I’m so lucky to witness it all.</p>
+        <p>And I want you to know something important—I don’t care about the past you’ve lived, the struggles you’ve faced, or the things you might think would hold you back. I see you for the incredible person you are now, and I’m not here to judge where you’ve been. I’m here to offer you something new, something real—a chance to feel life again, but this time with someone who will stand by you through it all. I don’t care where you’ve been; I care about where we’re going together. And I’m ready to walk that path with you, hand in hand, offering you the love, care, and freedom to just be yourself. are.</span></p>
+        <p>Whatever challenges come our way, whatever dreams we want to chase, I’m ready to be that person who motivates you when you feel like giving up, who celebrates your wins as if they were my own, and who’ll keep reminding you just how amazing you are. Because you are.</p>
+        <p>I want you to know that with me, you’ll never have to settle for less. I’m going to keep evolving, growing, pushing myself to be the best version of me—so I can be the best for you. Whatever it is you need—love, support, space, adventure, or just someone to laugh with—I’m here for it.</p>
+        <p>I see a future where we’re not just happy but thriving. And trust me, this is just the beginning. So, when the time comes, I want you to know one thing: with me, you’ll never have to second-guess your choice. I’ll be right here, ready to make this love something you’ve always deserved.</p>
+        <p>
+        <p>Being with you means everything to me, and I want to be more than just a comforting presence; I want to be the reason you feel safe to let go, to lean on someone without fear. I want you to know that whatever shadows linger or struggles weigh on you, I’m here, ready to take them on by your side. You don’t ever have to face anything alone, not while I’m with you. My heart is yours in every way, a steady, unwavering source of love and strength, here to remind you how truly remarkable you are—even on days you might not feel it. I’m here to help you rise, to show you every day that you are treasured, and to walk this path with you, hand in hand. So lean on me whenever you need, my love, and together, we’ll turn even the heaviest of days into something beautiful.</p>    
+            Yours,
+            The One Who’s Ready to Be Everything You Need
         <div class="button-container">
-            <a href="pictures.html" class="button">Eslem's Pictures</a>
+            <a href="pictures.html" class="button">Soura's Pictures</a>
             <a href="abouther.html" class="button">All About Her</a>
         </div>
     </div>
