--- a/pictures.html
+++ b/pictures.html
@@ -68,14 +68,14 @@
 <style type="text/css" id="operaUserStyle"></style></head>
 <body>
 <div class="container">
-    <h1>Slaima's Picture Album</h1>
+    <h1>Soura's Picture Album</h1>
     <div class="image-gallery">  
-          <img src="herimages/1.png" alt="">
-          <img src="herimages/3.png" alt="">
-          <img src="herimages/4.png" alt="">
-          <img src="herimages/5.png" alt="">
-          <img src="herimages/6.png" alt="">
-          <img src="herimages/7.png" alt="">
+          <img src="herimages/pic1.png" alt="">
+          <img src="herimages/pic2.png" alt="">
+          <img src="herimages/pic3.png" alt="">
+          <img src="herimages/pic4.png" alt="">
+          <img src="herimages/pic5.png" alt="">
+          <img src="herimages/pic6.png" alt="">
     </div>
 </div>
 <a href="index.html" class="button">Back to Home</a>
