--- a/pictures.html
+++ b/pictures.html
@@ -68,7 +68,7 @@
 <style type="text/css" id="operaUserStyle"></style></head>
 <body>
 <div class="container">
-    <h1>Soura's Picture Album</h1>
+    <h1>Souraa's Picture Album</h1>
     <div class="image-gallery">  
           <img src="herimages/pic1.png" alt="">
           <img src="herimages/pic2.png" alt="">
